# transcoder-ablation-pipeline

./: README.md  load_graph_weights_transcoder.py  pyproject.toml  relearn-eval.ipynb  requirements.txt  sae-environment.yml  test_existing_models.ipynb
unlearning/: SAE_steer.ipynb  Unlearning.ipynb  sae-eval-relearning.ipynb  sanity_check.py
unlearning/artifacts/: sae_eval_corrected.csv  sae_eval_corrected.json
unlearning/bio/maxentropy-bio-only/: special_tokens_map.json
unlearning/bio/npo-bio-only/: generation_config.json  model.safetensors.index.json
unlearning/bio/relearn_results/: MaxEntropy_relearning_results.json  NPO_relearning_results.json  RMU_relearning_results.json  relearning_summary.json
unlearning/bio/relearn_results/MaxEntropy-relearned/: special_tokens_map.json
unlearning/bio/relearn_results/NPO-relearned/: config.json
unlearning/bio/rmu-bio-only/: tokenizer_config.json
unlearning/model-diffing/: model-diffing-unlearning.ipynb
